Commit  a lot of things.